sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value lgr
  var fin=lgr-2
          ^AlgCocktailSort2:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while (changement=true){
                   ^